--- a/frontend/themes/theoptimistichr/styles.css
+++ b/frontend/themes/theoptimistichr/styles.css
@@ -1,4 +1,8 @@
 @import url('./main-layout.css');
+@import url('./views/mitarbeiterliste-view.css');
+@import url('./views/rechteverwaltung-view.css');
+@import url('./views/adressformular-view.css');
+@import url('./views/personformular-view.css');
 @import url('line-awesome/dist/line-awesome/css/line-awesome.min.css');    html {
       --lumo-border-radius: calc(var(--lumo-size-m) / 2);
 
